Fix text overflow on submit page

--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -70,7 +70,7 @@ select {
   font-size: 16px;
 }
 
-.form * {
+.container * {
   word-break: break-word;
 }
 
